<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="109dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_address"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_address"
                android:inputType="textPersonName"
                android:text="193.107.74.102"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_port"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_port"
                android:inputType="number|textPersonName"
                android:text="21100"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:text="@string/settings_login"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_login"
                android:inputType="textPersonName"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="ObmenFTP" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_password"
                android:inputType="textPassword"
                android:text="Rd@h@0405"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_path"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_path"
                android:inputType="textPersonName"
                android:text="0001"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_to1C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsTo1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_file_to1C"
                android:inputType="textPersonName"
                android:text="@string/settings_file_to1C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_from1C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsFrom1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_file_from1C"
                android:inputType="textPersonName"
                android:text="@string/settings_file_from1C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_request1C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settingsRequest1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/settings_file_request1C"
                android:inputType="textPersonName"
                android:text="@string/settings_request1C"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:height="100dp"
                android:shadowColor="@color/purple_700"
                android:shadowDx="2"
                android:shadowDy="2"
                android:singleLine="false"
                android:text="..."
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="Повернутися"
                android:visibility="gone" />

            <Button
                android:id="@+id/settings_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="Зберегти"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/settings_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Тест з'єднання"
                android:visibility="gone"
                tools:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Test conection"
                android:visibility="gone"
                tools:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_writeFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Write file"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/btn_readFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Read file"
                android:visibility="gone"
                tools:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>