<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doc_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocMainFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/NUMBER"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/DATE"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/CLIENT_NAME"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocClientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/CLOUD"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:freezesText="false"
                    android:text="@string/COMMENT"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocComments"
                    android:layout_width="wrap_content"
                    android:layout_height="106dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/NUMBER_DOC_CONTR"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocClientNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/DATE_DOC_CONTR"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextDocClientDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="date"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>